--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "17.3.0",
-    "npm": "8.3.0"
+    "node": "16.14.0",
+    "npm": "8.3.1"
   },
   "scripts": {
     "start": "node index.js",
@@ -15,12 +15,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.10",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^3.7.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "fomantic-ui": "^2.8.8",
+    "jscharting": "^3.2.2",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
-    "react-icons": "^4.3.1"
+    "react-bootstrap": "^2.1.0",
+    "react-google-charts": "^4.0.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.2",
+    "typescript": "^4.5.5",
+    "uuid": "^8.3.2"
   }
 }
